--- a/TaskOne/TaskOne.vcxproj
+++ b/TaskOne/TaskOne.vcxproj
@@ -154,7 +154,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Producer.cpp" />
+    <ClCompile Include="StudentInfo.cpp" />
     <ClCompile Include="TaskOne.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Client.h" />
+    <ClInclude Include="Producer.h" />
+    <ClInclude Include="StudentInfo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
